# pjimcrm

./: .gitignore  deploy.sh  manage.py  pyproject.toml
pjimcrm/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
pjimcrm/migrations/: 0001_initial.py  0002_paytodetails_alter_invoice_invoice_uuid_and_more.py  0002_remove_timesheetentry_time_seconds_and_more.py  0003_alter_client_address_alter_invoice_invoice_uuid.py  0004_invoice_client_alter_invoice_invoice_uuid.py  0005_timesheetentry_entry_date_and_more.py  0006_alter_invoice_invoice_uuid_and_more.py
pjimcrm/static/pjimcrm/: common.js  style.css
pjimcrm/templates/pjimcrm/: base.html  client_detail.html  error_message.html  home.html  invoice_detail.html  invoice_pdf.html  project_create.html  project_detail.html  project_edit.html  timer.html  timesheet_detail.html  timesheet_project_detail.html
pjimcrm/templates/pjimcrm/snippets/: timer_banner.html
pjimcrm/templates/registration/: login.html
pjimcrm/templatetags/: pjimcrm_extras.py
pjimmanage/: asgi.py  settings.py  urls.py  wsgi.py
resources/: favicon.afdesign
resources/public/: manifest.json
